# midihelper

./: README.md  pyproject.toml
src/midihelper/: cli.py
src/midihelper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: 01AusmeinesHerz.csv  test_1.txt
