[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midihelper"
version = "0.3.0"
description = "CLI to convert MIDI files to CSV and extract data from CSVs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["mido>=1.3.0", "pandas>=2.0"]

[project.scripts]
midihelper = "midihelper.cli:main"